fixed text align of card titile in product page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14092,7 +14092,7 @@ footer .copyright-social ul li:last-child {
 .cap {
   position: absolute;
   bottom: 30px;
-  left: 0;
+  right: 0;
   background-image: -webkit-gradient(linear, left top, right top, from(#0e0e0e5c), to(#1b1515));
   background-image: -webkit-linear-gradient(left, #0e0e0e5c 0%, #1b1515 100%);
   background-image: -o-linear-gradient(left, #0e0e0e5c 0%, #1b1515 100%);
